# pic-gdsfactory-uv

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  drc_log.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: COMPONENTS.md  SETUP.md  WORKFLOW.md
klayout/: drc_enhanced.drc  drc_simple_test.drc  print_drc_report.rb
scripts/: build_top.py  init.py
src/pic_template/: __init__.py
src/pic_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pic_template/chips/: top.py
src/pic_template/circuits/: __init__.py  waveguide_array.py  wdm_filter.py
src/pic_template/components/: rings.py  straight.py
src/pic_template/config/: __init__.py  config.yaml
src/pic_template/flows/: geometry_check.py  run_drc.py  verify.py
src/pic_template/pdk/: cross_section.py  layers.py
tests/: config_test.py  layers_test.py  parametric_test.py  ports_test.py  smoke_test.py  verification_test.py
