[project]
name = "pic-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdsfactory>=9.31.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]


[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"
